fix router link

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="<%= BASE_URL %>cdn/iconfont/1.0.0/index.css">
     <link rel="stylesheet" href="<%= BASE_URL %>cdn/avuex/1.0.0/index.css">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>Avue 通用管理 系统快速开发框架</title>
+    <title>Avuex 通用管理 系统快速开发框架</title>
     <style>
         html,
         body,
