--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="<%= BASE_URL %>cdn/iconfont/1.0.0/index.css">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <script src="https://cdn.bootcss.com/html2canvas/0.5.0-beta4/html2canvas.min.js"></script>
-  <title>Avuex 通用管理 系统快速开发框架</title>
+  <title>Avue-cli 通用管理 系统快速开发框架</title>
   <style>
     html,
     body,
